[package]
name = "egui-system-fonts"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "System font loader helpers for egui: auto-detect locale, set/extend fallback fonts."
readme = "README.md"
repository = "https://github.com/yijehyung/egui-system-fonts"
homepage = "https://github.com/yijehyung/egui-system-fonts"
documentation = "https://docs.rs/egui-system-fonts"
keywords = ["font", "gui", "egui"]
categories = ["gui"]
rust-version = "1.88"

[dependencies]
egui = "0.33.3"
system-fonts = "0.1"
log = "0.4"
